2006-11-02  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/m2pa_sl.c: major rework for test cases and attach/enable
	  capability
	* src/test/test-m2pa.c: corresponding alterations to test cases and test
	  case corrections from testing
	* tests/testsuite-m2pa.at: removed old test case

2006-10-31  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/m2pa_sl.c: more debugging and a few corrections
	* src/modules/sdt_tpi.c: printf corrections
	* src/modules/sl_tpi.c: printf corrections
	* src/test/test-m2pa.c: many corrections to test cases
	* src/util/init/sigtran: added m2pa_sl module to modules list
	* src/util/sysconfig/sigtran.in: added m2pa_sl module to modules list
	* tests/testsuite-m2pa.at: added sanity checks to testsuite

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-m2pa.at: added ability to sync between test cases

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/m2pa_sl.c: working up module
	* src/modules/m2pa_dl.c: added working file
	* src/modules/sl_dl.c: added working file
	* src/test/test-m2pa.c: working up test suite
	* src/test/test-sigtran.c: working up test suite

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/sigtran.refs: updated streams release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-16  Brian Bidulock  <bidulcok@openss7.org>

	- started off this new STREAMS SIGTRAN package

	* ChangeLog: added new package file
	* AUTHORS: added new package file
	* Makefile.am: added new package file
	* NEWS: added new package file
	* README: added new package file
	* THANKS: added new package file
	* acinclude.m4: added new package file
	* configure.ac: added new package file
	* configure.nexusware: added new package file
	* sigtran.gif: added new package file
	* sigtran.lsm.in: added new package file
	* sigtran.spec.in: added new package file
	* sigtran.tif: added new package file