@@ -6,6 +6,9 @@
 	  case corrections from testing
 	* tests/testsuite-m2pa.at: removed old test case
 
+	* src/modules/m2pa_sl.c: clear rtb when synchronizing sequence numbers
+	* src/test/test-m2pa.c: corrections to display and last test cases
+
 2006-10-31  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/modules/m2pa_sl.c: more debugging and a few corrections
